kdeploy/nsqadmin-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.20.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: nsqadmin
  name: nsqadmin
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.20.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/internal-network: "true"
        io.kompose.service: nsqadmin
    spec:
      containers:
      - args:
        - /nsqadmin
        - --lookupd-http-address=nsqlookupd:4161
        image: nsqio/nsq:v0.3.8
        name: nsqadmin
        ports:
        - containerPort: 4171
        resources: {}
      restartPolicy: Always
status: {}
