kdeploy/nsqd-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.20.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: nsqd
  name: nsqd
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.20.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/internal-network: "true"
        io.kompose.service: nsqd
    spec:
      containers:
      - args:
        - /nsqd
        - --lookupd-tcp-address=nsqlookupd:4160
        - --broadcast-address=127.0.0.1
        image: nsqio/nsq:v0.3.8
        name: nsqd
        ports:
        - containerPort: 4150
        - containerPort: 4151
        resources: {}
      restartPolicy: Always
status: {}
