kdeploy/redis-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/internal-network: "true"
        io.kompose.network/outside-world: "true"
        io.kompose.service: redis
    spec:
      containers:
      - image: redis:4.0.9-alpine
        name: redis
        ports:
        - containerPort: 6379
        resources: {}
      restartPolicy: Always
status: {}
