kdeploy/driver-location-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: driver-location
  labels:
    io.kompose.service: driver-location
    version: "3"
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: driver-location
    io.kompose.service: driver-location
