kdeploy/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gateway
  name: gateway
spec:
  type: NodePort
  ports:
  - name: "9000"
    port: 9000
    targetPort: 80
  selector:
    app: gateway
