kdeploy/nsqadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.20.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: nsqadmin
  name: nsqadmin
spec:
  ports:
  - name: "4171"
    port: 4171
    targetPort: 4171
  selector:
    io.kompose.service: nsqadmin
status:
  loadBalancer: {}
