kdeploy/nsqd-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.20.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: nsqd
  name: nsqd
spec:
  ports:
  - name: "4150"
    port: 4150
    targetPort: 4150
  - name: "4151"
    port: 4151
    targetPort: 4151
  selector:
    io.kompose.service: nsqd
status:
  loadBalancer: {}
