kdeploy/nsqlookupd-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.20.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: nsqlookupd
  name: nsqlookupd
spec:
  ports:
  - name: "4160"
    port: 4160
    targetPort: 4160
  - name: "4161"
    port: 4161
    targetPort: 4161
  selector:
    io.kompose.service: nsqlookupd
status:
  loadBalancer: {}
