kdeploy/zombie-driver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zombie-driver
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: zombie-driver
