kdeploy/outside-world-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: outside-world
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/outside-world: "true"
  podSelector:
    matchLabels:
      io.kompose.network/outside-world: "true"
